Bug#27640, backup id not dispalyed in the output of "ndb_mgm start backup wait completed" correct related sourcecode after merge from 5.0

storage/ndb/src/mgmclient/CommandInterpreter.cpp:
  correct something to ensure only related sourcecode are merged